nginx.-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginxpod
spec:
  containers:
    - name: nginxcontainer
      image: nginx:latest
      ports:
        - containerPort: 80
