todo-ui-api.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
        app: mongodb
  template:
    metadata:
      name: mongodb-pod
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb-container
          image: mongo
          ports:
            - containerPort: 27017

---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
spec:
  selector:
    app: mongodb
  ports:
    - port: 27017
      targetPort: 27017
          
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongoexpress-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongoexpress
  template:
    metadata:
      name: mongoexpress-pod
      labels:
        app: mongoexpress
    spec:
      containers:
        - name: mongoexpress-container
          image: mongo-express
          ports: 
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: mongoexpress-nodeport
spec:
  type: NodePort
  selector:
    app: mongoexpress
  ports:
    - nodePort: 30000
      port: 8083
      targetPort: 8081
