nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  rules:
  - host: nginx-demo.com
    http:
      - paths: 
          path: /
          pathType: Prefix
          backend:
            service:
              name: nginx-nodeport
              port:
                number: 30001
